--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-netlify": "^1.0.0-next.36",
     "@sveltejs/kit": "next",
+    "ava": "^4.0.0",
     "svelte": "^3.44.0"
   },
   "type": "module",
