--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,14 @@
 	"tasks": [
 		{
 			"label": "dev",
-			"dependsOn": ["npm: db", "npm: createFixtures", "npm: dev"],
+			"dependsOn": [
+				"npm: db",
+				"npm: createFixtures",
+				"npm: dev"
+			],
 			"dependsOrder": "sequence",
-		},
+			"problemMatcher": []
+			},
 		{
 			"type": "npm",
 			"script": "createFixtures",
@@ -25,12 +30,12 @@
 				"background": {
 					"activeOnStart": true,
 					"beginsPattern": "Starting...",
-					"endsPattern": "Node has initialized the cluster.",
+					"endsPattern": "Node has initialized the cluster."
 				}
 			},
 			"label": "npm: db",
 			"detail": "docker run --rm --name faunadb -p 8443:8443 -p 8084:8084 fauna/faunadb",
-			"isBackground": true,
+			"isBackground": true
 		},
 		{
 			"type": "npm",
