--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "db": "docker run --rm --name faunadb -p 8443:8443 -p 8084:8084 fauna/faunadb",
     "getAllPissups": "fauna eval --file db/get-all-pissups.fql | jq",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "unit": "npx ava --watch"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
