--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "getAllPissups": "fauna eval --file db/get-all-pissups.fql | jq",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "unit": "ava --watch",
+    "unit": "ava **/*.spec.js",
+    "unit:dev": "npm run unit -- --watch",
     "test:dev": "cypress open"
   },
   "devDependencies": {
