--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,20 +4,19 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "dev",
+			"label": "Dev",
 			"dependsOn": [
-				"npm: db",
-				"npm: createFixtures",
-				"npm: dev",
+				"DB",
+				"Svelte dev",
 			],
 			"dependsOrder": "sequence",
 			"problemMatcher": []
 		},
 		{
 			"type": "npm",
-			"script": "createFixtures",
+			"script": "db:init",
 			"problemMatcher": [],
-			"label": "npm: createFixtures",
+			"label": "DB init",
 			"detail": "fauna import --path pissup.json"
 		},
 		{
@@ -33,7 +32,7 @@
 					"endsPattern": "Node has initialized the cluster."
 				}
 			},
-			"label": "npm: db",
+			"label": "DB",
 			"detail": "docker run --rm --name faunadb -p 8443:8443 -p 8084:8084 fauna/faunadb",
 			"isBackground": true
 		},
@@ -50,7 +49,7 @@
 					"endsPattern": "http://localhost:3000"
 				}
 			},
-			"label": "npm: dev",
+			"label": "Svelte dev",
 			"detail": "svelte-kit dev",
 			"isBackground": true
 		},
@@ -58,7 +57,7 @@
 			"type": "npm",
 			"script": "test:dev",
 			"problemMatcher": [],
-			"label": "npm: test:dev",
+			"label": "End-to-end",
 			"detail": "cypress open"
 		}
 	]
