--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "build": "svelte-kit build",
-    "createFixtures": "fauna import --path db/pissup.json --secret secret --domain localhost --scheme http --port 8443",
-    "dev": "svelte-kit dev",
-    "db": "docker run --rm --name faunadb -p 8443:8443 fauna/faunadb",
+    "dev": "./habitat.sh svelte-kit dev",
+    "db": "docker run --rm --name faunadb -p 8443:8443 -v organiseyourpissup:/var/lib/faunadb fauna/faunadb",
+    "db:init": "fauna eval --file db/init.fql",
     "getAllPissups": "fauna eval --file db/get-all-pissups.fql | jq",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
