--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
-    "faunadb": "^4.4.1"
+    "faunadb": "^4.4.1",
+    "praecox-datepicker": "^1.1.7"
   }
 }
