Lots of refactoring

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@fontsource/amatic-sc": "^4.5.0",
     "@fontsource/fira-mono": "^4.5.0",
+    "@fontsource/port-lligat-slab": "^4.5.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
     "faunadb": "^4.4.1",
