--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "svelte-kit build",
-    "createFixtures": "fauna import --path ./db/pissup.json --append",
+    "createFixtures": "./habitat.sh node ./db/createPissup.js",
     "dev": "./habitat.sh svelte-kit dev",
     "db": "docker run --rm --name faunadb -p 8443:8443 -v organiseyourpissup:/var/lib/faunadb fauna/faunadb",
     "db:init": "fauna eval --file db/init.fql",
@@ -30,7 +30,7 @@
     "@fontsource/port-lligat-slab": "^4.5.2",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
-    "faunadb": "^4.4.1",
+    "faunadb": "^4.5.2",
     "praecox-datepicker": "^1.1.7"
   }
 }
