--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:init": "fauna eval --file db/init.fql",
     "getAllPissups": "fauna eval --file db/get-all-pissups.fql | jq",
     "package": "svelte-kit package",
+    "postinstall": "patch-package",
     "preview": "svelte-kit preview",
     "unit": "ava **/*.spec.js",
     "unit:dev": "npm run unit -- --watch",
@@ -21,6 +22,7 @@
     "ava": "^4.0.0",
     "cypress": "^9.3.1",
     "fauna-shell": "^0.13.0",
+    "patch-package": "^6.4.7",
     "svelte": "^3.44.0"
   },
   "type": "module",
@@ -31,6 +33,7 @@
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
     "faunadb": "^4.5.2",
+    "plausible-tracker": "^0.3.5",
     "praecox-datepicker": "^1.1.7"
   }
 }
